# MinDia

./: .appveyor.yml  .travis.yml  AUTHORS  BUGS  CreateCDDist.py  HISTORY  INSTALL  Makefile  README  README.md  _mindia.mak  _mindiapyc.mak  _minsrv.mak  _modules.py  _path.py  _settime.py  _texttest.py  _tkmsg.py  _tktest.py  _todo.txt  acinclude.m4  aclocal.m4  autorun.inf  beschreibung.txt  changes.txt  cleartext.py  config.h.in  configure  configure.in  configure_qt2  do_file_list.sh  domsg.py  dotgz  dowzip.bat  dowzipn.bat  dozip.bat  example_nz.iss  fade.py  faq_de.html  gendev.dsp  (+47 more)
docs/: README  todo_de.html
gendev/: gendev.cpp  gendev.pro  igendev.h
mindiapyc/: ScriptDlg.ui  _minutils.cpp  mindia_wrap.c  mindia_wrap.cpp  mindiapy.cpp  scriptdlgimpl.cpp  scriptdlgimpl.h  scriptfcn.cpp  scriptfcn.h
minsrv/: dllbase.cpp  dllbase.h  minbase.cpp  minbase.h  miniini.cpp  miniini.h  minsrv.pro
obsolete/: autorun.bat  configure.in  do_file_list.sh  dowzip.bat  dowzipn.bat  dozip.bat  example.txt  index.html  make_dist_deb.sh  make_src_tar.sh  mindia.desktop  mindia.i  mkexamplegz.bat  runshow.bat  src_files.lst
old/: AboutExtDlg.ui  ComLoggingDlg.ui  ConfigurationDlg.ui  DiaInfoDlg.ui  NewDialog.ui  PresentationDataDlg.ui  _dllbase.cpp  _dllbase.h  configplayerdlgimpl.cpp  createmoviedlgimpl.cpp  createmoviedlgimpl.h  eventmapdlgimpl.h  gendev.pro  iniconst.h  madplayer_patch.cpp  mindia.dsw  mindia.iss  mindia.plg  mindiaall.mak  mindiapyc.pro  mindoc.ini  miniini.cpp  miniini.h  mp3file.cpp  net_gendev.vcproj  net_mindia.sln  net_mindia.vcproj  net_mindiapyc.vcproj  osdep2.h  read_mp3.cpp  setqt2  wmindia.mak  zmindia_de.qm
(+209 files in other folders)
